<resources>
    <string name="app_name">Public Mail By Nicho</string>
    <string name="icon_description">main icon</string>
    <string name="username_text">Username</string>
    <string name="hint_username_edit_view">Example: Clara</string>
    <string name="button_inbox_text">Check Inbox</string>
    <string name="warning_empty_text">username is empty</string>
    <string name="domain_email">@publicmailbynicho.com</string>
    <string name="url_inbox">https://public-mail-by-nicho-api.herokuapp.com/mail/inbox</string>
    <string name="url_send_email">https://public-mail-by-nicho-api.herokuapp.com/mail/send</string>
    <string name="notification_message">Inbox Updated!</string>
    <string name="to_text">To:</string>
    <string name="subject_text">Subject:</string>
    <string name="send_text">SEND</string>
    <string name="receiver_empty_warning">Receiver is empty</string>
    <string name="subject_empty_warning">Subject is empty</string>
    <string name="content_empty_warning">Content is empty</string>
    <string name="email_sent_text">Email sent</string>
    <string name="no_connection_warning">No Internet Connection!</string>
    <string name="refresh_text">Refresh Time:</string>
    <string name="ten_seconds_text">10 Seconds</string>
    <string name="thirty_seconds_text">30 Seconds</string>
    <string name="sixty_seconds_text">60 Seconds</string>
    <string name="save_inbox_to_file">Save the Inbox to a File in External Storage:</string>
    <string name="save_text">SAVE</string>
    <string name="external_storage_not_mounted_warning">External Storage not Mounted!</string>
    <string name="write_external_storage_permission_explanation_title">Write External Storage Permission</string>
    <string name="write_external_storage_permission_explanation_message">External Storage is used to save your inbox as a text file</string>
    <string name="write_external_storage_permission_not_allow">Save failed, you do not allow Write External Storage Permission</string>
    <string name="path_of_inbox_file">File is saved in</string>
    <string name="current_time_text">Current Time:</string>
    <string name="network_available_title">Network Availability</string>
    <string name="network_available_message">You are not connected to any network, please turn on wifi or other active networks</string>
</resources>
