<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingActivity">

    <TextView
        android:id="@+id/refresh_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/refresh_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup
        android:id="@+id/setting_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/refresh_time_text">

        <RadioButton
            android:id="@+id/ten_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_seconds_text"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/thirty_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_seconds_text"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/sixty_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixty_seconds_text"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>