<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SendEmailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/sender_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="10dp" />

        <EditText
            android:id="@+id/receiver_edit_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sender_text"
            android:maxLines="1"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/sender_layout"
            app:layout_constraintLeft_toRightOf="@id/receiver_edit_text"
            android:padding="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sender_layout">

        <TextView
            android:id="@+id/subject_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/subject_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/subject_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/subject_layout"
            app:layout_constraintLeft_toRightOf="@id/subject_text"
            android:maxLines="1"
            android:inputType="text"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/subject_layout"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:layout_margin="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/send_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="onClickSend"/>

</androidx.constraintlayout.widget.ConstraintLayout>